--- a/.github/workflows/scrape-hssaa.yml
+++ b/.github/workflows/scrape-hssaa.yml
@@ -2,8 +2,8 @@ name: Scrape HSSAA Data
 
 on:
   schedule:
-    - cron: '0 5 * * *'   # Runs at midnight Eastern (05:00 UTC)
-  workflow_dispatch:        # Allows manual trigger from GitHub UI
+    - cron: '0 5 * * *'   # Midnight Eastern (05:00 UTC)
+  workflow_dispatch:        # Manual trigger from GitHub UI
 
 jobs:
   scrape:
@@ -19,7 +19,10 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: pip install requests beautifulsoup4
+        run: |
+          pip install playwright beautifulsoup4
+          playwright install chromium
+          playwright install-deps chromium
 
       - name: Run scraper
         run: python scripts/scrape_hssaa.py
